# hydromon

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  hydromon.toml.template
docs/: metric_units.md
memo/: comparison.txt
src/: config.rs  db.rs  main.rs
src/common/: date.rs
src/http/: common.rs  cpu_freqs.rs  cpu_modes.rs  cpu_usage.rs  disk_io.rs  disk_storage.rs  gpu_nvidia.rs  health.rs  memory_usage.rs  mod.rs  network_connection.rs  network_traffic.rs  sys_activity.rs  sys_summary.rs  sys_temp.rs  temperature.rs
src/stat/: cpu_freqs.rs  cpu_modes.rs  cpu_usage.rs  disk_io.rs  disk_storage.rs  gpu_nvidia.rs  memory_usage.rs  mod.rs  network_connection.rs  network_traffic.rs  sys_activity.rs  sys_summary.rs  sys_temp.rs  temperature.rs
